--- a/boolean_retrieval.ipynb
+++ b/boolean_retrieval.ipynb
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Indexing Corpus + Stemming"
+    "# Indexing Corpus + Stemming"
    ]
   },
   {
