Fix: fix semua step dari awal sampe step 3

--- a/boolean_retrieval.ipynb
+++ b/boolean_retrieval.ipynb
@@ -258,19 +258,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
     "def preprocessing(docs):\n",
     "    preprocessed_docs = []\n",
     "    stop_words = set(stopwords.words('english'))\n",
+    "\n",
     "    for doc_id, doc in docs:\n",
     "        # Mengubah ke lowecase\n",
     "        doc = doc.lower()\n",
+    "\n",
+    "        # Menghilangkan tanda baca\n",
+    "        doc = re.sub(r'[^\\w\\s]','',doc)\n",
+    "\n",
+    "        # Tokenisasi\n",
     "        tokens = nltk.word_tokenize(doc)\n",
+    "\n",
     "        # Menghilangkan stopwords\n",
-    "        filtered_tokens = [word for word in tokens if word.isalpha() and word not in stop_words]\n",
+    "        filtered_tokens = [word for word in tokens if word not in stop_words]\n",
     "\n",
     "        cleaned_doc = ' '.join(filtered_tokens)\n",
     "        preprocessed_docs.append((doc_id, cleaned_doc))\n",
@@ -279,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -288,18 +297,18 @@
      "text": [
       "d1: cat chased small mouse garden\n",
       "d2: friendly dog played fetch river\n",
-      "d3: ranking function widely used search engines\n",
+      "d3: bm25 ranking function widely used search engines\n",
       "d4: boolean retrieval uses logical operators like\n",
-      "d5: weights terms frequency rarity\n",
+      "d5: tfidf weights terms frequency rarity\n",
       "d6: neural retrieval uses dense embeddings semantic search\n",
       "d7: dog cat slept couch\n",
       "d8: library hosts workshop information retrieval\n",
-      "d9: students implemented compared\n",
+      "d9: students implemented bm25 compared tfidf\n",
       "d10: chef roasted chicken rosemary garlic\n",
       "d11: black cat crossed old stone bridge night\n",
       "d12: dogs loyal companions long hikes\n",
       "d13: dataset contains fifteen short sentences testing\n",
-      "d14: reranking models reorder candidates using transformers\n",
+      "d14: reranking models reorder bm25 candidates using transformers\n",
       "d15: dog sniffed cat ignored mouse\n"
      ]
     }
@@ -326,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,51 +359,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-08-26 12:17:59,630 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:205) - Setting log level to INFO\n",
-      "2025-08-26 12:17:59,634 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:208) - ============ Loading Index Configuration ============\n",
-      "2025-08-26 12:17:59,635 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:209) - AbstractIndexer settings:\n",
-      "2025-08-26 12:17:59,635 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:210) -  + DocumentCollection path: docs\n",
-      "2025-08-26 12:17:59,635 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:211) -  + CollectionClass: JsonCollection\n",
-      "2025-08-26 12:17:59,636 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:212) -  + Index path: indexes/sample_collection_jsonl\n",
-      "2025-08-26 12:17:59,637 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:213) -  + Threads: 1\n",
-      "2025-08-26 12:17:59,638 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:214) -  + Optimize (merge segments)? false\n",
-      "2025-08-26 12:17:59,704 INFO  [main] index.IndexCollection (IndexCollection.java:246) - Using DefaultEnglishAnalyzer\n",
-      "2025-08-26 12:17:59,704 INFO  [main] index.IndexCollection (IndexCollection.java:247) - Stemmer: porter\n",
-      "2025-08-26 12:17:59,705 INFO  [main] index.IndexCollection (IndexCollection.java:248) - Keep stopwords? false\n",
-      "2025-08-26 12:17:59,705 INFO  [main] index.IndexCollection (IndexCollection.java:249) - Stopwords file: null\n",
-      "2025-08-26 12:17:59,886 INFO  [main] index.IndexCollection (IndexCollection.java:197) - IndexCollection settings:\n",
-      "2025-08-26 12:17:59,886 INFO  [main] index.IndexCollection (IndexCollection.java:198) -  + Generator: DefaultLuceneDocumentGenerator\n",
-      "2025-08-26 12:17:59,887 INFO  [main] index.IndexCollection (IndexCollection.java:199) -  + Language: en\n",
-      "2025-08-26 12:17:59,888 INFO  [main] index.IndexCollection (IndexCollection.java:200) -  + Stemmer: porter\n",
-      "2025-08-26 12:17:59,888 INFO  [main] index.IndexCollection (IndexCollection.java:201) -  + Keep stopwords? false\n",
-      "2025-08-26 12:17:59,889 INFO  [main] index.IndexCollection (IndexCollection.java:202) -  + Stopwords: null\n",
-      "2025-08-26 12:17:59,890 INFO  [main] index.IndexCollection (IndexCollection.java:203) -  + Store positions? true\n",
-      "2025-08-26 12:17:59,890 INFO  [main] index.IndexCollection (IndexCollection.java:204) -  + Store docvectors? true\n",
-      "2025-08-26 12:17:59,890 INFO  [main] index.IndexCollection (IndexCollection.java:205) -  + Store document \"contents\" field? false\n",
-      "2025-08-26 12:17:59,892 INFO  [main] index.IndexCollection (IndexCollection.java:206) -  + Store document \"raw\" field? true\n",
-      "2025-08-26 12:17:59,893 INFO  [main] index.IndexCollection (IndexCollection.java:207) -  + Additional fields to index: []\n",
-      "2025-08-26 12:17:59,893 INFO  [main] index.IndexCollection (IndexCollection.java:208) -  + Whitelist: null\n",
-      "2025-08-26 12:17:59,893 INFO  [main] index.IndexCollection (IndexCollection.java:209) -  + Pretokenized?: false\n",
-      "2025-08-26 12:17:59,894 INFO  [main] index.IndexCollection (IndexCollection.java:210) -  + Codec: Lucene99\n",
-      "2025-08-26 12:17:59,895 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:238) - ============ Indexing Collection ============\n",
-      "2025-08-26 12:17:59,898 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:247) - Thread pool with 1 threads initialized.\n",
-      "2025-08-26 12:17:59,899 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:248) - 1 file found in docs\n",
-      "2025-08-26 12:17:59,899 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:249) - Starting to index...\n",
-      "2025-08-26 12:18:00,297 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:307) - Indexing Complete! 15 documents indexed\n",
-      "2025-08-26 12:18:00,297 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:308) - ============ Final Counter Values ============\n",
-      "2025-08-26 12:18:00,298 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:309) - indexed:               15\n",
-      "2025-08-26 12:18:00,298 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:310) - unindexable:            0\n",
-      "2025-08-26 12:18:00,298 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:311) - empty:                  0\n",
-      "2025-08-26 12:18:00,299 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:312) - skipped:                0\n",
-      "2025-08-26 12:18:00,300 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:313) - errors:                 0\n",
-      "2025-08-26 12:18:00,306 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:316) - Total 15 documents indexed in 00:00:00\n"
+      "2025-08-26 19:45:28,962 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:205) - Setting log level to INFO\n",
+      "2025-08-26 19:45:28,966 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:208) - ============ Loading Index Configuration ============\n",
+      "2025-08-26 19:45:28,967 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:209) - AbstractIndexer settings:\n",
+      "2025-08-26 19:45:28,967 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:210) -  + DocumentCollection path: docs\n",
+      "2025-08-26 19:45:28,967 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:211) -  + CollectionClass: JsonCollection\n",
+      "2025-08-26 19:45:28,968 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:212) -  + Index path: indexes/sample_collection_jsonl\n",
+      "2025-08-26 19:45:28,969 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:213) -  + Threads: 1\n",
+      "2025-08-26 19:45:28,970 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:214) -  + Optimize (merge segments)? false\n",
+      "2025-08-26 19:45:29,046 INFO  [main] index.IndexCollection (IndexCollection.java:246) - Using DefaultEnglishAnalyzer\n",
+      "2025-08-26 19:45:29,046 INFO  [main] index.IndexCollection (IndexCollection.java:247) - Stemmer: porter\n",
+      "2025-08-26 19:45:29,047 INFO  [main] index.IndexCollection (IndexCollection.java:248) - Keep stopwords? false\n",
+      "2025-08-26 19:45:29,047 INFO  [main] index.IndexCollection (IndexCollection.java:249) - Stopwords file: null\n",
+      "2025-08-26 19:45:29,364 INFO  [main] index.IndexCollection (IndexCollection.java:197) - IndexCollection settings:\n",
+      "2025-08-26 19:45:29,366 INFO  [main] index.IndexCollection (IndexCollection.java:198) -  + Generator: DefaultLuceneDocumentGenerator\n",
+      "2025-08-26 19:45:29,366 INFO  [main] index.IndexCollection (IndexCollection.java:199) -  + Language: en\n",
+      "2025-08-26 19:45:29,367 INFO  [main] index.IndexCollection (IndexCollection.java:200) -  + Stemmer: porter\n",
+      "2025-08-26 19:45:29,367 INFO  [main] index.IndexCollection (IndexCollection.java:201) -  + Keep stopwords? false\n",
+      "2025-08-26 19:45:29,368 INFO  [main] index.IndexCollection (IndexCollection.java:202) -  + Stopwords: null\n",
+      "2025-08-26 19:45:29,368 INFO  [main] index.IndexCollection (IndexCollection.java:203) -  + Store positions? true\n",
+      "2025-08-26 19:45:29,368 INFO  [main] index.IndexCollection (IndexCollection.java:204) -  + Store docvectors? true\n",
+      "2025-08-26 19:45:29,369 INFO  [main] index.IndexCollection (IndexCollection.java:205) -  + Store document \"contents\" field? false\n",
+      "2025-08-26 19:45:29,371 INFO  [main] index.IndexCollection (IndexCollection.java:206) -  + Store document \"raw\" field? true\n",
+      "2025-08-26 19:45:29,372 INFO  [main] index.IndexCollection (IndexCollection.java:207) -  + Additional fields to index: []\n",
+      "2025-08-26 19:45:29,372 INFO  [main] index.IndexCollection (IndexCollection.java:208) -  + Whitelist: null\n",
+      "2025-08-26 19:45:29,373 INFO  [main] index.IndexCollection (IndexCollection.java:209) -  + Pretokenized?: false\n",
+      "2025-08-26 19:45:29,374 INFO  [main] index.IndexCollection (IndexCollection.java:210) -  + Codec: Lucene99\n",
+      "2025-08-26 19:45:29,374 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:238) - ============ Indexing Collection ============\n",
+      "2025-08-26 19:45:29,378 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:247) - Thread pool with 1 threads initialized.\n",
+      "2025-08-26 19:45:29,379 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:248) - 1 file found in docs\n",
+      "2025-08-26 19:45:29,379 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:249) - Starting to index...\n",
+      "2025-08-26 19:45:29,791 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:307) - Indexing Complete! 15 documents indexed\n",
+      "2025-08-26 19:45:29,791 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:308) - ============ Final Counter Values ============\n",
+      "2025-08-26 19:45:29,792 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:309) - indexed:               15\n",
+      "2025-08-26 19:45:29,792 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:310) - unindexable:            0\n",
+      "2025-08-26 19:45:29,792 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:311) - empty:                  0\n",
+      "2025-08-26 19:45:29,793 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:312) - skipped:                0\n",
+      "2025-08-26 19:45:29,793 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:313) - errors:                 0\n",
+      "2025-08-26 19:45:29,800 INFO  [main] index.AbstractIndexer (AbstractIndexer.java:316) - Total 15 documents indexed in 00:00:00\n"
      ]
     },
     {
@@ -402,7 +411,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: Using incubator modules: jdk.incubator.vector\n",
-      "Aug 26, 2025 12:17:59 PM org.apache.lucene.store.MMapDirectory lookupProvider\n",
+      "Aug 26, 2025 7:45:29 PM org.apache.lucene.store.MMapDirectory lookupProvider\n",
       "WARNING: You are running with Java 22 or later. To make full use of MMapDirectory, please update Apache Lucene.\n"
      ]
     }
@@ -419,11 +428,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Boolean Retrieval"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyserini.search.lucene import querybuilder\n",
+    "\n",
+    "searcher = LuceneSearcher('indexes/sample_collection_jsonl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queries = [(\"q1\", \"dog AND cat\"),\n",
+    "           (\"q2\", \"dog OR cat\"),\n",
+    "           (\"q3\", \"dog AND NOT cat\"),\n",
+    "           (\"q4\", \"(bm25 OR tf-idf) AND retrieval\"),\n",
+    "           (\"q5\", \"NOT workshop AND library\")]\n",
+    "\n",
+    "#Mendefinisikan term\n",
+    "term_dog = querybuilder.get_term_query(\"dog\")\n",
+    "term_cat = querybuilder.get_term_query(\"cat\")\n",
+    "term_bm25 = querybuilder.get_term_query(\"bm25\")\n",
+    "term_tfidf = querybuilder.get_term_query(\"tf-idf\")\n",
+    "term_retrieval = querybuilder.get_term_query(\"retrieval\")\n",
+    "term_workshop = querybuilder.get_term_query(\"workshop\")\n",
+    "term_library = querybuilder.get_term_query(\"library\")\n",
+    "\n",
+    "# Mendefinisikan operator boolean\n",
+    "and_op = querybuilder.JBooleanClauseOccur['must'].value\n",
+    "or_op = querybuilder.JBooleanClauseOccur['should'].value\n",
+    "not_op = querybuilder.JBooleanClauseOccur['must_not'].value\n",
+    "\n",
+    "#Query 1: dog AND cat\n",
+    "q1_builder = querybuilder.get_boolean_query_builder()\n",
+    "q1_builder.add(term_dog, and_op)\n",
+    "q1_builder.add(term_cat, and_op)\n",
+    "q1 = q1_builder.build()\n",
+    "\n",
+    "#Query 2: dog OR cat\n",
+    "q2_builder = querybuilder.get_boolean_query_builder()\n",
+    "q2_builder.add(term_dog, or_op)\n",
+    "q2_builder.add(term_cat, or_op)\n",
+    "q2 = q2_builder.build()\n",
+    "\n",
+    "#Query 3: dog AND NOT cat\n",
+    "q3_builder = querybuilder.get_boolean_query_builder()\n",
+    "q3_builder.add(term_dog, and_op)\n",
+    "q3_builder.add(term_cat, not_op)\n",
+    "q3 = q3_builder.build()\n",
+    "\n",
+    "#Query 4: (bm25 OR tf-idf) AND retrieval\n",
+    "q4_inner_builder = querybuilder.get_boolean_query_builder()\n",
+    "q4_inner_builder.add(term_bm25, or_op)\n",
+    "q4_inner_builder.add(term_tfidf, or_op)\n",
+    "q4_inner = q4_inner_builder.build()\n",
+    "q4_builder = querybuilder.get_boolean_query_builder()\n",
+    "q4_builder.add(q4_inner, and_op)\n",
+    "q4_builder.add(term_retrieval, and_op)\n",
+    "q4 = q4_builder.build()\n",
+    "\n",
+    "#Query 5: NOT workshop AND library\n",
+    "q5_builder = querybuilder.get_boolean_query_builder()\n",
+    "q5_builder.add(term_workshop, not_op)\n",
+    "q5_builder.add(term_library, and_op)\n",
+    "q5 = q5_builder.build()\n",
+    "\n",
+    "boolean_queries = [(\"q1\", q1),\n",
+    "                   (\"q2\", q2),\n",
+    "                   (\"q3\", q3),\n",
+    "                   (\"q4\", q4),\n",
+    "                   (\"q5\", q5)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Query: dog AND cat\n",
+      " 1. d7   1.41170  dog cat slept couch\n",
+      " 2. d15  1.36290  dog sniffed cat ignored mouse\n",
+      "\n",
+      "Query: dog OR cat\n",
+      " 1. d7   1.41170  dog cat slept couch\n",
+      " 2. d15  1.36290  dog sniffed cat ignored mouse\n",
+      " 3. d1   0.68150  cat chased small mouse garden\n",
+      " 4. d12  0.68150  dogs loyal companions long hikes\n",
+      " 5. d2   0.68150  friendly dog played fetch river\n",
+      " 6. d11  0.63740  black cat crossed old stone bridge night\n",
+      "\n",
+      "Query: dog AND NOT cat\n",
+      " 1. d12  0.68150  dogs loyal companions long hikes\n",
+      " 2. d2   0.68150  friendly dog played fetch river\n",
+      "\n",
+      "Query: (bm25 OR tf-idf) AND retrieval\n",
+      "No results found.\n",
+      "\n",
+      "Query: NOT workshop AND library\n",
+      "No results found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "queri_idx = 0\n",
+    "for query_id, query in boolean_queries:\n",
+    "    hits = searcher.search(query)\n",
+    "    print(f\"\\nQuery: {queries[queri_idx][1]}\")\n",
+    "    queri_idx += 1\n",
+    "    if len(hits) == 0:\n",
+    "        print(\"No results found.\")\n",
+    "        continue\n",
+    "    for i in range(len(hits)):\n",
+    "        cont_data = json.loads(searcher.doc(hits[i].docid).raw())\n",
+    "        print(f'{i+1:2}. {hits[i].docid:4} {hits[i].score:.5f}  {cont_data[\"contents\"]}')"
+   ]
   }
  ],
  "metadata": {
